--- a/Home.html
+++ b/Home.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crochet Rory Store</title>
   <link rel="stylesheet" href="style.css">
+  
+  
 </head>
 <body>
   <header>
@@ -152,6 +154,73 @@
 
 
 
+
+
+  <section id="Shopping-cart">
+  <div class="section">
+    <!-- قسم الصورة -->
+    <div class="image-container">
+      <img src="images/cats-halloween-designs.JPG" alt="Product Image">
+    </div>
+
+    <!-- قسم النص -->
+    <div class="text-container">
+      <h2>Cats Halloween designs</h2>
+      <p>
+        A charming handmade rose bouquet, perfect gift for Valentine's Day or any special occasion. Carefully woven rose petals exude femininity and delicacy.
+      </p>
+      <p class="price">£123.8</p>
+      <p>Available colors:</p>
+      <div class="color-options">
+        <span class="color" style="background-color: #c1a2f8;"></span>
+        <span class="color" style="background-color: #f8a2c8;"></span>
+        <span class="color" style="background-color: #ffebcc;"></span>
+        <span class="color" style="background-color: #b2a3a3;"></span>
+      </div>
+      <button class="order-button">Order Now</button>
+    </div>
+  </div>
+ </section>
+
+
+
+  
+
+
+<section id="Shopping-cart">
+  <div class="product-section reverse">
+    <!-- قسم الصورة -->
+    <div class="image-container">
+      <img src="IMAGE_URL" alt="Cat Medal">
+    </div>
+  
+    <!-- قسم النص -->
+    <div class="text-container">
+      <h2>Cat Medal</h2>
+      <p>Handmade Crochet Cat Pet Medallion</p>
+      <p class="price">£30.9</p>
+      <div class="rating">
+        <span>⭐⭐⭐⭐⭐</span>
+      </div>
+      <div class="quantity">
+        <button>-</button>
+        <span>3</span>
+        <button>+</button>
+      </div>
+      <h3>Order Summary</h3>
+      <p>Product price: £30.9</p>
+      <p>Delivery price: £10.1</p>
+      <p>Total price: £40.0</p>
+      <button class="confirm-button">Confirm Order</button>
+    </div>
+  </div>
+  
+  </section>
+
+
+
+
+
   <section id="contact">
     <h2>Contact form </h2>
     <form id="contact-form">
@@ -168,6 +237,10 @@
     © 2024 Crochet Rory Store. All rights reserved.
   </footer>
 
+
+
+
+  
   
 
 <script src="javascript.js"></script>
