--- a/Home.html
+++ b/Home.html
@@ -58,8 +58,8 @@
   </div>
   <button id="goToTopBtn">↑</button>
 
- 
 
+  <!---------------------------firspage ------------------------------------>
 
 
   <section id="about-me">
@@ -80,6 +80,7 @@
     </div>
   </section>
 
+  <!---------------------------secundpage ------------------------------------>
 
 
 
@@ -120,7 +121,9 @@
     </div>
   </section>
 
+  <!---------------------------thirdpage ------------------------------------>
 
+  
 
   <section id="free_pattren">
     <div class="container">
@@ -151,49 +154,48 @@
     </div>
   </section>
 
-
-
-
-
-
-  <section id="Shopping-cart">
-  <div class="section">
-    <!-- قسم الصورة -->
-    <div class="image-container">
-      <img src="images/cats-halloween-designs.JPG" alt="Product Image">
-    </div>
-
-    <!-- قسم النص -->
-    <div class="text-container">
-      <h2>Cats Halloween designs</h2>
-      <p>
-        A charming handmade rose bouquet, perfect gift for Valentine's Day or any special occasion. Carefully woven rose petals exude femininity and delicacy.
-      </p>
-      <p class="price">£123.8</p>
-      <p>Available colors:</p>
-      <div class="color-options">
-        <span class="color" style="background-color: #c1a2f8;"></span>
-        <span class="color" style="background-color: #f8a2c8;"></span>
-        <span class="color" style="background-color: #ffebcc;"></span>
-        <span class="color" style="background-color: #b2a3a3;"></span>
-      </div>
-      <button class="order-button">Order Now</button>
-    </div>
-  </div>
- </section>
-
-
-
   
+  <!---------------------------fourthpage ------------------------------------>
+
+
+
+ 
+ <section id="Orderـdetails">
+ <div class="section">
+  <!-- قسم الصورة -->
+  <div class="image-container">
+    <img src="images/cats-halloween-designs.JPG" alt="Product Image">
+  </div>
+
+  <!-- قسم النص -->
+  <div class="text-container">
+    <h2>Rose bouquet</h2>
+    <p>
+      A charming handmade rose bouquet, perfect gift for Valentine's Day or any special occasion. Carefully woven rose petals exude femininity and delicacy.
+    </p>
+    <p class="price">£123.8</p>
+    <p>Available colors:</p>
+    <div class="color-options">
+      <span class="color" style="background-color: #c1a2f8;"></span>
+      <span class="color" style="background-color: #f8a2c8;"></span>
+      <span class="color" style="background-color: #ffebcc;"></span>
+      <span class="color" style="background-color: #b2a3a3;"></span>
+    </div>
+    <button class="order-button">Order Now</button>
+  </div>
+</div>
+
+
+    <!---------------------------fivepage ------------------------------------>
+
 
 
 <section id="Shopping-cart">
   <div class="product-section reverse">
     <!-- قسم الصورة -->
     <div class="image-container">
-      <img src="IMAGE_URL" alt="Cat Medal">
+      <img src="images/Cat_Medal.JPG" alt="Cat Medal">
     </div>
-  
     <!-- قسم النص -->
     <div class="text-container">
       <h2>Cat Medal</h2>
@@ -218,6 +220,7 @@
   </section>
 
 
+  <!---------------------------sexpage ------------------------------------>
 
 
 
@@ -240,8 +243,6 @@
 
 
 
-  
-  
 
 <script src="javascript.js"></script>
 
